Fix discounted price misalignment in Cart block

--- a/assets/js/atomic/blocks/product-elements/price/style.scss
+++ b/assets/js/atomic/blocks/product-elements/price/style.scss
@@ -1,12 +1,3 @@
-.wc-block-components-product-price {
-	margin-top: 0;
-	margin-bottom: $gap-small;
-	display: block;
-
-	&__regular {
-		margin-right: 0.5em;
-	}
-}
 .is-loading {
 	.wc-block-components-product-price::before {
 		@include placeholder();
